Fix `interpretation` syntax
Remove the LaTeXisms, as those are not part of the DOL Grammar, and add
a mandatory `end`.

--- a/Standard/OMG_OntoIOp_current.tex
+++ b/Standard/OMG_OntoIOp_current.tex
@@ -10771,8 +10771,9 @@ end             %% an atom has no proper parts
 %% translate the logic, then rename the entities
 interpretation TaxonomyToParthood : Taxonomy to BasicParthood =
   translation trans:PropositionalToSROIQ,
-  PT $\mapsto$ Particular,	S $\mapsto$ SpaceRegion, 
-  T $\mapsto$ TimeInterval,	A $\mapsto$ AbstractRegion, %[ and so on ]%
+  PT |-> Particular,   S |-> SpaceRegion,
+  T  |-> TimeInterval, A |-> AbstractRegion, %[ and so on ]%
+end
 
 logic log:CommonLogic syntax ser:CommonLogic/CLIF
                 %% syntax: the Lisp-like CLIF dialect of Common Logic
