Fix typo: duplicate `s`
And remove trailing whitespace while at it.

--- a/Standard/OMG_OntoIOp_current.tex
+++ b/Standard/OMG_OntoIOp_current.tex
@@ -10639,7 +10639,7 @@ library PropositionalMereology
 logic log:Propositional syntax ser:Prop/Hets       
 
 %% basic taxonomic information about mereology reused from DOLCE:
-ontology Taxonomy = %conssistent      
+ontology Taxonomy = %consistent
   props PT, T, S, AR, PD
   . S $\vee$ T $\vee$ AR $\vee$ PD $\longrightarrow$ PT                                                    %% PT is the top concept
   . S $\wedge$  T  $\longrightarrow$ $\bot$                  %% PD, S, T, AR are pairwise disjoint
